feat: build speedup